--- a/map/alfa_lab_map.yaml
+++ b/map/alfa_lab_map.yaml
@@ -1,4 +1,4 @@
-image: file://map/alfa_lab_map.pgm
+image: alfa_lab_map.pgm
 resolution: 0.050000
 origin: [-10.000000, -10.000000, 0.000000]
 negate: 0
